[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Position2D"]
script = ExtResource( 1 )

[node name="SpawnDelay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="SpawnDelay" to="." method="_on_SpawnDelay_timeout"]
